[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/StormCloudEnemy.gd" type="Script" id=1]
[ext_resource path="res://Graphic/clouds/dark_cloud__dark_cloud_lightning_002.png" type="Texture" id=2]
[ext_resource path="res://Graphic/Animations/dark_cloud_animation/dark_cloud__dark_cloud_lightning_000.png" type="Texture" id=3]
[ext_resource path="res://Graphic/Animations/dark_cloud_animation/dark_cloud__dark_cloud_lightning_001.png" type="Texture" id=4]
[ext_resource path="res://Graphic/Animations/dark_cloud_animation/dark_cloud__dark_cloud_lightning_002.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Utils/SwipeDetector.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "storm2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "storm1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 379.387, 77.6678 )

[sub_resource type="Animation" id=3]

resource_name = "Fade_out"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy"
} ]
}

[node name="StormCloud" type="RigidBody2D" index="0" groups=[
"Enemy",
]]

input_pickable = true
collision_layer = 2
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 3
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 1.0
angular_velocity = 0.0
angular_damp = 2.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Visibility" ]
impulse_value_x = 250
impulse_value_y = -15

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

position = Vector2( 1.08072, 27.5584 )
frames = SubResource( 1 )
animation = "storm1"
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="1"]

rect = Rect2( -10, -10, 20, 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="2"]

build_mode = 0
polygon = PoolVector2Array( -15.6782, 141.231, -6.87567, 95.4583, -22.7202, 93.2576, -8.19604, 40.0023, -35.4839, 38.6819, -70.694, 21.9571, -98.8622, 28.1189, -118.668, -1.36961, -96.6615, -24.6963, -80.817, -23.8161, -76.4157, -51.544, -57.4902, -58.5861, -41.2056, -58.146, -24.0406, -84.1134, 3.68738, -92.4758, 33.616, -76.6313, 39.7777, -58.146, 60.9038, -59.0262, 84.6707, -45.3823, 83.7904, -20.2951, 95.6738, -22.9358, 111.518, -14.1333, 121.641, 6.55267, 108.878, 23.7176, 92.593, 28.1189, 72.3471, 21.9571, 65.3051, 32.5201, 37.137, 40.4424, 16.8912, 38.2418, 1.0466, 75.2124, 27.0141, 74.7723 )

[node name="TouchArea" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea" index="0"]

position = Vector2( -1.47018, -1.36762 )
scale = Vector2( 1, 0.911214 )
shape = SubResource( 2 )

[node name="SwipeDetector" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 0, -0.174824 )

[node name="Timer" parent="SwipeDetector" index="0"]

wait_time = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade_out = SubResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_StormCloud_body_entered"]

[connection signal="body_shape_entered" from="." to="." method="_on_Cloud_body_shape_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="input_event" from="TouchArea" to="SwipeDetector" method="_on_TouchArea_input_event"]

[connection signal="swiped" from="SwipeDetector" to="." method="_on_SwipeDetector_swiped"]


[editable path="SwipeDetector"]
